tests/fixtures/invalid/list_bitor_str.py
# Cannot bitwise OR List[int] and Str
x: list[int] = [1, 2, 3] | "hello"
